--- a/online_gift_store/public/index.html
+++ b/online_gift_store/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" ></script> -->
     <!-- Bootstrap tooltips -->
     <script
       type="text/javascript"
